# scipion-em-tomo

./: .gitignore  CHANGES.txt  MANIFEST.in  README.md  README.rst  protocols.conf  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
scipion_em_tomo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tomo/: __init__.py  constants.py  objects.py  protocols.conf  simulateStreaming.py  utils.py  wizards.py
tomo/convert/: __init__.py  convert.py  mdoc.py
tomo/data/: DataSet.py  __init__.py
tomo/protocols/: __init__.py  protocol_alignment_assign.py  protocol_alignment_assign_subtomo.py  protocol_assignTransformationTS.py  protocol_assign_tomo2subtomo.py  protocol_assign_tomo2tomoMask.py  protocol_base.py  protocol_compose_CTF.py  protocol_compose_TS.py  protocol_consensus_classes_subtomo.py  protocol_correct_tilt_offset.py  protocol_ctf_consensus.py  protocol_ctf_validate.py  protocol_export_coords.py  protocol_extract_coordinates.py  protocol_fit_ellipsoid.py  protocol_geometric_picking.py  protocol_geometric_picking_filter.py  protocol_import_coordinates.py  protocol_import_coordinates_from_scipion.py  protocol_import_ctf.py  protocol_import_subtomograms.py  protocol_import_tiltseries.py  protocol_import_tomograms.py  protocol_import_tomomasks.py  protocol_import_ts_streaming.py  protocol_invert_tilt_angles.py  protocol_landmark_to_2d.py  protocol_mask_coordinates.py  protocol_mesh_from_segmentation.py  protocol_misalignTS.py  protocol_motion_correct_tiltseries.py  protocol_motioncor_tiltseries.py  protocol_particle_pick_consensus.py  (+19 more)
(+77 files in other folders)
