[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-tomo"
dynamic = ["version", "dependencies"]
description = "Plugin to use tomo within the Scipion framework"
authors = [
    {name = "Scipion Team", email = "scipion@cnb.csic.es"}
]
requires-python = ">=3.8"
readme = "README.rst"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
keywords = ["scipion", "cryoem", "cryoet", "imageprocessing", "scipion-3.0"]

[project.urls]
Homepage = "https://github.com/scipion-em/scipion-em-tomo"
Issues = "https://github.com/scipion-em/scipion-em-tomo/issues"

[tool.setuptools.dynamic]
version = {attr = "tomo.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"tomo" = ["protocols.conf", "icon.png", "templates/*"]

[project.entry-points."pyworkflow.plugin"]
tomo = "tomo"
